# NERecord-demo

./: CMakeLists.txt  README.md  httpwrapper.cpp  httpwrapper.h  layout.txt  layout_sub.txt  main.cpp  nerecordEventHandlerImpl.cpp  nerecordEventHandlerImpl.h  nerecordPacketObserverImpl.cpp  nerecordPacketObserverImpl.h
curl/: httpclient.h
fjson/: fjson.h  json_helper.h
fjson/json_builder/: fjson_builder.h
fjson/json_parser/: fjson_parser.h
sdk/: parameters.json  readme.txt
sdk/include/: nerecord_base.h  nerecord_base_types.h  nerecord_engine.h  nerecord_engine_defines  nerecord_engine_defines.h
sdk/lib/: libavdevice.so.58  libavdevice.so.58.11.102  libavfilter.so.7  libavfilter.so.7.90.100  libavformat.so.58.64.100  libpostproc.so.55.8.100  libswresample.so.3.8.100  libswscale.so.5.8.100  nerecordbase.mri
src/: CMakeLists.txt  NERecord-demo.cpp
